# vscodium-prod-patcher

./: .gitignore  Justfile  README.md  pyproject.toml
src/vscodium_prod_patcher/: config.py  consts.py  hook.py  hook_templates.py  main.py  patch.py  paths.py  shared.py
src/vscodium_prod_patcher/config/: __init__.py  auto.py  command.py  main.py  paths.py  schema.py  template.py  tui.py  utils.py
src/vscodium_prod_patcher/hooks/: install.py  install_templates.py  main.py  patch.py
src/vscodium_prod_patcher/pacman/: __init__.py  alpm_ini.py  command.py  minipacman.py  pkgdesc.py
src/vscodium_prod_patcher/patch/: __init__.py  command.py  extension_galleries.py  main.py
src/vscodium_prod_patcher/tui/: friendlybool.py
src/vscodium_prod_patcher/utils/: backup.py  editor.py  friendlybool.py  print.py
src/vscodium_prod_patcher_alpm_ini/: pyproject.toml
src/vscodium_prod_patcher_alpm_ini/vscodium_prod_patcher_alpm_ini/: __init__.py  de.py  mixin.py
typings/: pyalpm.pyi
