[project]
name = "vscodium-prod-patcher"
version = "1.0.2"
description = "Universal patcher for VSCodium"
readme = "README.md"
authors = [
    { name = "fnrir", email = "fnr1r0@protonmail.com" }
]
license = "GPL-3.0"
requires-python = ">=3.13"
dependencies = [
    "toml>=0.10.2",
]

[project.scripts]
vscodium-prod-patcher = "vscodium_prod_patcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "flake8>=7.2.0",
    "mypy>=1.15.0",
    "pylint>=3.3.7",
    "types-toml>=0.10.8.20240310",
]
