[project]
name = "vscodium-prod-patcher"
version = "1.0.3"
description = "Universal patcher for VSCodium"
readme = "README.md"
authors = [
    { name = "fnrir", email = "fnr1r0@protonmail.com" }
]
license = "GPL-3.0"
requires-python = ">=3.13"
dependencies = [
    "vscodium-prod-patcher-alpm-ini==0.1.0",
    "mashumaro>=3.15",
    "toml>=0.10.2",
    "tomli>=2.2.1",
    "tomli-w>=1.2.0",
    "vscodium-prod-patcher-alpm-ini",
    "pyalpm>=0.10.12",
]

[project.scripts]
vscodium-prod-patcher = "vscodium_prod_patcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
config-tui = [
    "inquirer>=3.4.0",
]
dev = [
    "flake8>=7.2.0",
    "flake8-2020>=1.8.1",
    "flake8-breakpoint>=1.1.0",
    "flake8-bugbear>=24.12.12",
    "flake8-builtins>=2.5.0",
    "flake8-commas>=4.0.0",
    "flake8-comments>=0.1.2",
    "flake8-eradicate>=1.5.0",
    "flake8-executable>=2.1.3",
    "flake8-fixme>=1.1.1",
    "flake8-isort>=6.1.2",
    "flake8-raise>=0.0.5",
    "flake8-simplify>=0.21.0",
    "flake8-super>=0.1.3",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pylint>=3.3.7",
    "types-toml>=0.10.8.20240310",
]

[tool.isort]
include_trailing_comma = true
multi_line_output = "VERTICAL_GRID_GROUPED"

[tool.mypy]
check_untyped_defs = true
mypy_path = "typings"

[[tool.mypy.overrides]]
module = ["inquirer.*", "pycman.*"]
follow_untyped_imports = true

[tool.uv.workspace]
members = [
    "src/vscodium_prod_patcher_alpm_ini",
]

[tool.uv.sources]
vscodium-prod-patcher-alpm-ini = { workspace = true }
