[project]
name = "vscodium-prod-patcher-alpm-ini"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "mashumaro>=3.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#[tool.hatch.build.targets.wheel]
#packages = ["."]
#exclude = [
#    "pyproject.toml",
#]

#[tool.hatch.build.targets.wheel.sources]
#"." = "vscodium_prod_patcher_alpm_ini"
